# CMM

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  MANIFEST.in  README.md  install.ps1  install.sh  pyproject.toml
.claude/skills/project/cmm-guide/: SKILL.md
.github/workflows/: ci.yml  release.yml
docs/: TUTORIAL.md  VALIDATION.md  analysis-2026-06-12.md  architecture.md  clean-room-policy.md  design-revert-metabolism.md  feature-roadmap.md
docs/loop/: completion-report.md  ledger.md  rules.md  success-criteria.md
src/cmm/: __init__.py  cli.py
src/cmm/app/: __init__.py  __main__.py  genome_scale_scenario.py  main_window.py  screenshots.py  succinate_scenario.py
src/cmm/core/: __init__.py  condition.py  flux_state.py  media.py  provenance.py  results.py  simulation.py  solvers.py
src/cmm/features/: __init__.py  _perturbation.py  comparison.py  production.py  revert.py  strain_design.py  transformation.py
src/cmm/omics/: __init__.py  conditions.py  differential.py  expression.py
src/cmm/visualization/: __init__.py  figures.py
temp_figures_new/: README.md
test_data/: LAD.py  e_coli_core.Core metabolism.json
tests/: conftest.py  test_app_smoke.py  test_comparison.py  test_condition.py  test_conditions.py  test_core_primitives.py  test_differential.py  test_expression.py  test_genome_scale.py  test_media.py  test_production.py  test_revert.py  test_scenarios.py  test_scientific_sensitivity.py  test_simulation.py  test_strain_design.py  test_transformation.py  test_validation.py  test_visualization.py
